update of the code

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 </head>
 
 <body>
-    <div id="container">
+    <div id="container" class="container">
         <header class="header">
 
             <h3 class="header__tituloweb">portfolio.</h3>
 
             <nav class="header__menu">
-                <a href="#" class="">inicio</a>
+                <a href="#" class="activo">inicio</a>
                 <a href="#" class="">quien soy</a>
                 <a href="#" class="">trabajos</a>
                 <a href="#" class="">blog</a>
